# tdtw

./: .gitignore  CMakeLists.txt  bam.lua  database.db  tdtw.sln  tdtw.vcxproj  tdtw.vcxproj.filters
data/languages/: belarusian.txt  bosnian.txt  brazilian_portuguese.txt  bulgarian.txt  czech.txt  danish.txt  dutch.txt  finnish.txt  french.txt  german.txt  hungarian.txt  italian.txt  kyrgyz.txt  norwegian.txt  polish.txt  portuguese.txt  romanian.txt  russian.txt  serbian.txt  slovak.txt  spanish.txt  swedish.txt  turkish.txt  ukrainian.txt
datasrc/: compile.py  compile_tdtw.py  content.py  datatypes.py  network_tdtw.py
other/md5/: md5.cpp
other/sqlite/lib/: sqlite3.lib
src/base/: math.h  system.c  system.h  vmath.h
src/base/tl/: array.h
src/engine/: autoupdate.h  client.h  config.h  console.h  input.h  keys.h  server.h  storage.h  tdtwserver.h
src/engine/client/: backend_sdl.cpp  client.cpp  client.h  graphics.cpp  input.cpp  input.h  keynames.h  text.cpp
src/engine/server/: register.h  server.h
src/engine/shared/: autoupdate.cpp  autoupdate.h  config.cpp  config.h  console.cpp  console.h  datafile.cpp  datafile.h  mapchecker.cpp  netban.h  network.h  network_tdtw_server.cpp  protocol.h  protocol_tdtw.h
src/game/: variables.h  version.h
src/game/client/: animstate.cpp  component.h  gameclient.cpp  gameclient.h  nui.cpp  nui.h  render.h  ui.cpp  ui.h
src/game/client/components/: binds.cpp  binds.h  broadcast.cpp  camera.cpp  camera.h  chat.cpp  chat.h  controls.cpp  controls.h  effects.cpp  effects.h  emoticon.cpp  emoticon.h  hud.cpp  hud.h  items.cpp  killmessages.cpp  maplayers.cpp  menus.cpp  menus.h  menus_browser.cpp  menus_demo.cpp  menus_ingame.cpp  menus_settings.cpp  nameplates.cpp  notification.cpp  notification.h  players.cpp  players.h  scoreboard.cpp  sounds.cpp  sounds.h  test.cpp  test.h
src/game/client/tdtwserver/: autoupdate.h  tdtwserver.cpp  tdtwserver.h  updatefiles.cpp  updatefiles.h
src/game/client/ui/: Block.cpp  Block.h  Text.cpp  Text.h  block.cpp  block1.cpp  elements.cpp  elements.h  nelements.cpp  nelements.h  nuiblock.cpp  nuiblock.h  nuimouse.cpp  nuimouse.h  nuitext.cpp  nuitext.h  text.cpp  text.h  text1.cpp  value.cpp  value.h
src/game/client/ui2/: nelements.cpp  nelements.h  nuiblock.cpp  nuiblock.h  nuimouse.cpp  nuimouse.h  nuitext.h
src/game/editor/: editor.cpp  layer_tiles.cpp
src/tdtwsrv/: autoupdate.cpp  autoupdate.h  client.cpp  client.h  game.h  tdtwsrv.cpp  tdtwsrv.h
src/tdtwsrv/game/: client.cpp  client.h  game.cpp  game.h
src/tdtwsrv/game/SQL/: SQL.cpp  SQL.h
src/tdtwsrv/server/: protocol.cpp  protocol.h  tdtwsrv.cpp  tdtwsrv.h
